{
    "name": "XboxInputs",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "991df3d6-540b-449a-92ff-571fd5060813",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "ae43c3ca-9ddc-41a2-a193-38211e8475d1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "LeftStick",
                    "id": "e4677fdb-ff26-4256-ad3a-d0802ed52123",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1e8eb427-ec5f-441b-abf8-324bfa86f963",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "83ceb496-215e-4061-8e20-e8e8a368f827",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5ac72d05-965c-43ab-a25e-11dd867912bd",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a0bd17f9-39d5-40a9-b5fa-8a9e2098b5d4",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "219cb9f2-6be5-4eee-b33f-b6acabc6505d",
            "actions": [
                {
                    "name": "PrimaryAttack",
                    "type": "Button",
                    "id": "1d90fa89-8736-4094-bdd6-4990e970d65f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "537fd76e-12b0-496a-a483-7a815e4e4b23",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}